# eguizh

./: Cargo.toml  README.md  clippy.toml  egui_demo_app.js
crates/eframe/src/native/: glow_integration.rs  wgpu_integration.rs
crates/egui/src/: context.rs  lib.rs
crates/egui/src/data/: output.rs
crates/egui/src/memory/: mod.rs
crates/egui_demo_app/: Cargo.toml
crates/egui_demo_app/src/: lib.rs  wrap_app.rs
crates/egui_demo_lib/: Cargo.toml
crates/egui_demo_lib/src/: lib.rs
crates/egui_demo_lib/src/demo/: about.rs  code_example.rs  font_book.rs  screenshot.rs
crates/egui_demo_lib/src/i18n/: mod.rs
crates/egui_demo_lib/src/i18n/translations/: mod.rs  zh.rs
crates/egui_extras/src/: syntax_highlighting.rs
crates/egui_i18n/: CHANGELOG.md  Cargo.toml  README.md
crates/egui_i18n/src/: language.rs  lib.rs  manager.rs
crates/egui_i18n/src/translations/: mod.rs  zh.rs
crates/epaint/src/text/: font.rs  fonts.rs  text_layout.rs
crates/epaint_default_fonts/src/: lib.rs
examples/custom_font/src/: main.rs
scripts/: check.sh  lint.py
scripts/clippy_wasm/: clippy.toml
